--- a/test.ipynb
+++ b/test.ipynb
@@ -2,48 +2,97 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n, k = map(int, input().split())"
+    "n, m = map(int, input().split())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "count = 0"
+    "d = [[0] * m for _ in range(n)]\n",
+    "d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y = 1, 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dx = [0, 0, -1, 1]\n",
+    "dy = [-1, 1, 0, 0]\n",
+    "move = ['L', 'R', 'U', 'D']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "3 4\n"
      ]
     }
    ],
    "source": [
-    "while n >= k:\n",
-    "    while n % k != 0:\n",
-    "        n -= 1\n",
-    "        count += 1\n",
-    "    n //= k\n",
-    "    count += 1\n",
-    "\n",
-    "while n > 1:\n",
-    "    n -= 1\n",
-    "    count += 1\n",
-    "\n",
-    "print(count)"
+    "for plan in plans:\n",
+    "    for i in range(len(move)):\n",
+    "        if plan == move[i]:\n",
+    "            nx = x + dx[i]\n",
+    "            ny = y + dy[i]\n",
+    "    if nx < 1 or ny < 1 or nx > n or ny > n:\n",
+    "        continue\n",
+    "    x, y = nx, ny\n",
+    "print(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "97"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ord('a')"
    ]
   },
   {
@@ -56,7 +105,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -70,12 +119,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "eae945cd26650d1a9e80883cc7432b5375b71714200134ef328a931288e35ea4"
    }
   }
  },
